Fixed alignment issue

--- a/styles.css
+++ b/styles.css
@@ -10,6 +10,9 @@
     flex-direction: column;
     align-items: center;
 }
+.post{
+    max-width: 350px;
+}
 #compose input {
     margin:1px;
 }
